# remote-usb

./: .gitignore  AGENTS.md  README.md  build_webfs.sh
docs/: description.md  hardware.md  plan.md  screen_states.md  sd_card_usb_msc_implementation_notes.md  spec.md  startup_wifi_flow.md  wifi_configuration.md
firmware/: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults  version.cmake
firmware/components/bsp/: CMakeLists.txt  bsp_lcd.c  bsp_led.c
firmware/components/bsp/include/: bsp_lcd.h  bsp_led.h  bsp_pins.h
firmware/components/fonts/: CMakeLists.txt  fonts.c  lv_font_stubs.c
firmware/components/http_server/: CMakeLists.txt  http_api_files.c  http_api_status.c  http_internal.h  http_server.c  http_static.c  http_util.c
firmware/components/storage/: CMakeLists.txt  sd_fatfs.c  sd_owner.c  sd_raw.c
firmware/components/ui/: CMakeLists.txt  ui_led.c  ui_logo.c  ui_logo.h  ui_state.c
firmware/components/usb_msc/: usb_msc.c  (+3 more)
firmware/fonts/: generate_pixel_fonts.py  pixel_font_cairopixel_32.c  pixel_font_delicatus_16.c  pixel_font_quinquefive_10_digits.c  pixel_font_quinquefive_5.c
firmware/main/: CMakeLists.txt  idf_component.yml  main.c
firmware/tools/: idf
web_ui/: .editorconfig  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
web_ui/dev/: mockApiPlugin.ts
web_ui/src/: RPCAPI.ts  appState.ts  i18n.ts  main.tsx  style.css
web_ui_legacy/: api.js  error.js  icons.js  index.html  lang.en.json  lang.ru.json  list.js  location.js  preactive.js  spiner.js  styles.css  uploader.js  utils.js
(+46 files in other folders)
